Fix narrow button min-width on mobile

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -283,12 +283,10 @@ body {
     flex-direction: column;
   }
 
-  .btn {
-    width: 100%;
-  }
-  
+  .btn, 
   .btn-narrow {
-    width: 50%;
+    width: 100%;
+    min-width: 75px;
   }
 
   .meta {
